<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.mzs.vibrokit.model.OnediskViewModel"/>
        <import type="com.mzs.vibrokit.model.OnediskViewModel.OutItem"/>
        <variable
            name="viewmodel"
            type="OnediskViewModel" />
        <variable
            name="outitem"
            type="OutItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:textAlignment="center"
        tools:context=".ui.Fragment_onedisk">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="132dp"
            android:layout_height="42dp"
            android:text="@string/vibration1"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/input_vibration1_a"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <EditText
            android:id="@+id/input_vibration1_a"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:nextFocusRight="@id/input_vibration1_p"
            android:nextFocusDown="@id/input_vibration1_p"
            android:text="@={viewmodel.mVibration1_a}"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/textView25"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/input_trialweight_a"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:text="@string/unit_um"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/input_vibration1_p"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/input_vibration1_a"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <EditText
            android:id="@+id/input_vibration1_p"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/button_calonedisk"
            android:text="@={viewmodel.mVibration1_p}"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/textView26"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/input_trialweight_p"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="18dp"
            android:layout_height="42dp"
            android:text="@string/unit_angle"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/input_vibration1_p"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/unit_um"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView19"
            app:layout_constraintEnd_toStartOf="@+id/input_vibration0_p"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/input_vibration0_a"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="132dp"
            android:layout_height="42dp"
            android:text="@string/trialweight"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView24"
            app:layout_constraintEnd_toStartOf="@+id/input_trialweight_a"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:text="@string/unit_g"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView25"
            app:layout_constraintEnd_toStartOf="@+id/input_trialweight_p"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/input_trialweight_a"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <EditText
            android:id="@+id/input_trialweight_a"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:nextFocusRight="@id/input_trialweight_p"
            android:nextFocusDown="@id/input_trialweight_p"
            android:text="@={viewmodel.mTrialweight_a}"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/input_vibration1_a"
            app:layout_constraintEnd_toStartOf="@+id/textView19"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/input_vibration0_a"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="132dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/vibration0"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toStartOf="@+id/input_vibration0_a"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_vibration0_a"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:nextFocusRight="@id/input_vibration0_p"
            android:nextFocusDown="@id/input_vibration0_p"
            android:text="@={viewmodel.mVibration0_a}"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/input_trialweight_a"
            app:layout_constraintEnd_toStartOf="@+id/textView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="18dp"
            android:layout_height="42dp"
            android:text="@string/unit_angle"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/input_trialweight_p"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <EditText
            android:id="@+id/input_vibration0_p"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:nextFocusRight="@id/input_trialweight_a"
            android:nextFocusDown="@id/input_trialweight_a"
            android:text="@={viewmodel.mVibration0_p}"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/input_trialweight_p"
            app:layout_constraintEnd_toStartOf="@+id/textView23"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="18dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/unit_angle"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/input_vibration0_p"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_trialweight_p"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:nextFocusRight="@id/input_vibration1_a"
            android:nextFocusDown="@id/input_vibration1_a"
            android:text="@={viewmodel.mTrialweight_p}"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/input_vibration1_p"
            app:layout_constraintEnd_toStartOf="@+id/textView20"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/input_vibration0_p"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_calonedisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:nextFocusForward="@id/button_resetonedisk"
            android:onClick="@{()->viewmodel.onCalOnediskClick()}"
            android:text="@string/button_calculate"
            app:layout_constraintEnd_toStartOf="@+id/button_resetonedisk"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_resetonedisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/button_reset"
            android:onClick="@{()->viewmodel.onResetOnediskClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_calonedisk"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:onClick="@{()->viewmodel.onResetOnediskClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_onedisk"
                    android:layout_width="match_parent"
                    android:layout_height="412dp"
                    android:fadingEdge="horizontal|vertical"
                    app:layoutManager="LinearLayoutManager" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>